--- a/index.html
+++ b/index.html
@@ -68,24 +68,24 @@
                 <th width="33%">Link</th> 
             </tr>
             <tr>
-                <td><a href="sides/html_css.php"><img src="pic/html_css.png" align="center" height="300";/></a></td>
+                <td><a href="sides/html_css.html"><img src="pic/html_css.png" align="center" height="300";/></a></td>
                 <td>HTML / CSS / JavaScript</td>
-                <td><a href="sides/html_css.php">Link zum HTML/CSS Tutorial</a></td>
+                <td><a href="sides/html_css.html">Link zum HTML/CSS Tutorial</a></td>
             </tr>
             <tr>
-                <td><a href="sides/php.php"><img src="pic/php-leader.png" align="center" height="300";/></a></td>
+                <td><a href="sides/php.html"><img src="pic/php-leader.png" align="center" height="300";/></a></td>
                 <td>PHP</td>
-                <td><a href="sides/php.php">Link zum PHP Tutorial</a><td>
+                <td><a href="sides/php.html">Link zum PHP Tutorial</a><td>
             </tr>
             <tr>
-                <td><a href="sides/python.php"><img src="pic/python3.jpg" align="center" height="300";/></a></td>
+                <td><a href="sides/python.html"><img src="pic/python3.jpg" align="center" height="300";/></a></td>
                 <td>Python</td>
-                <td><a href="sides/python.php">Link zum Python Tutorial</a><td>
+                <td><a href="sides/python.html">Link zum Python Tutorial</a><td>
             </tr>
             <tr>
-                <td><a href="sides/git.php"><img src="pic/gitlogo.png" align="center" height="300";/></a></td>
+                <td><a href="sides/git.html"><img src="pic/gitlogo.png" align="center" height="300";/></a></td>
                 <td>Git</td>
-                <td><a href="sides/git.php">Link zum Git Tutorial</a><td>
+                <td><a href="sides/git.html">Link zum Git Tutorial</a><td>
             </tr>
         </table>
 
