--- a/sides/git.html
+++ b/sides/git.html
@@ -2,51 +2,10 @@
 
 <html>
     <head>
-        <style>
-        body{
-            background-color:#F7F8E0;
-            color: black;
-            font-family:arial;
-        }
-        p{
-            font-family:arial;
-            text-align: center;
-        }
-        h1{
-            font-family:arial;
-            color:black;
-        }
-        h2{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h3{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h4{
-            font-family:arial;
-            color:black;
-        }
-        h5{
-            font-family:arial;
-            color:black;
-        }
-        h6{
-            font-family:arial;
-            color:black;
-        }
-        </style>
-    </head>
-</html>
-
-<html>
-    <head>
         <title>
             Git Tutorial
         </title>
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <style>
         td{
             text-align:center;
