--- a/sides/html_css.html
+++ b/sides/html_css.html
@@ -2,51 +2,10 @@
 
 <html>
     <head>
-        <style>
-        body{
-            background-color:#F7F8E0;
-            color: black;
-            font-family:arial;
-        }
-        p{
-            font-family:arial;
-            text-align: center;
-        }
-        h1{
-            font-family:arial;
-            color:black;
-        }
-        h2{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h3{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h4{
-            font-family:arial;
-            color:black;
-        }
-        h5{
-            font-family:arial;
-            color:black;
-        }
-        h6{
-            font-family:arial;
-            color:black;
-        }
-        </style>
-    </head>
-</html>
-
-<html>
-    <head>
         <title>
             HTML/CSS Tutorial
         </title>
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <style>
         td{
             text-align:center;
@@ -86,6 +45,10 @@
             <tr>
                 <td>&lttitle&gt...&lt/title&gt</td>
                 <td>Betitlet die Seite im Tab. Im Head</td>
+            </tr>
+            <tr>
+                <td>&ltlink rel="stylesheet" type="text/css" href="Pfad_zur_Datei.css"&gt</td>
+                <td>CSS Datei einfügen. Ersetzt den style Part (Adjustments). Im Head</td>
             </tr>
             <tr>
                 <td>&ltbr /&gt</td>
@@ -146,15 +109,15 @@
 
         <!--3. Tabelle-->
         <h2><u>Adjustments</u></h2>
+        <p align=„center“>Style-Part kann im CSS gemacht werden!</p>
         <table align="center" border="1" width="95%" cellpadding="5px">
             <tr>
                 <th width="50%">Code</th> 
                 <th width="50%">Erklärung</th>
             </tr>
-
             <tr>
                 <td>&ltstyle&gt p{color:red; font-family:arial; padding=24px;} &lt/style&gt</td>
-                <td>Änderungen für den p im ganzen Code. (Wird im Head geschrieben). Padding ist die grösse der Schrift</td>
+                <td>Änderungen für den p im ganzen Code. (Im Head). Padding ist die grösse der Schrift.</td>
             </tr>
             <tr>
                 <td>&ltstyle&gt body{background-colour:66ff00;  colour: white;} &lt/style&gt</td>
@@ -253,6 +216,10 @@
                 <td>colspan == Länge des Kästchens, rowspan == Grösse des Kästchens</td>
             </tr>
         </table>
+
+        <!--8. Tabelle-->
+        <h2><u>CSS</u></h2>
+        <p align=„center“>In Bearbeitung</p>
 
     </body>
 </html>
