--- a/sides/python.html
+++ b/sides/python.html
@@ -2,43 +2,7 @@
 
 <html>
     <head>
-        <style>
-        body{
-            background-color:#F7F8E0;
-            color: black;
-            font-family:arial;
-        }
-        p{
-            font-family:arial;
-            text-align: center;
-        }
-        h1{
-            font-family:arial;
-            color:black;
-        }
-        h2{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h3{
-            font-family:arial;
-            color:black;
-            text-align: center;
-        }
-        h4{
-            font-family:arial;
-            color:black;
-        }
-        h5{
-            font-family:arial;
-            color:black;
-        }
-        h6{
-            font-family:arial;
-            color:black;
-        }
-        </style>
+        <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
 </html>
 
