--- a/sides/html_css.html
+++ b/sides/html_css.html
@@ -235,6 +235,7 @@
         <!---------------------------------------------------------------------------------------------------------------------->
         <h1 align="center"><u>CSS</u></h1>
         <h2><u>Allgemein</u></h2>
+        <p>&ltlink rel="stylesheet" type="text/css" href="style.css"&gt</p>
         <table align="center" border="1" width="95%" cellpadding="5px">
             <tr>
                 <th width="50%">Code</th> 
