--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </tr>
             <tr>
                 <td><a href="sides/html_css.html"><img src="pic/html_css.png" align="center" height="300";/></a></td>
-                <td>HTML / CSS / JavaScript</td>
+                <td>HTML / CSS / JavaScript <br /> (Static Website)</td>
                 <td><a href="sides/html_css.html">Link zum HTML/CSS Tutorial</a></td>
             </tr>
             <tr>
                 <td><a href="sides/php.html"><img src="pic/php-leader.png" align="center" height="300";/></a></td>
-                <td>PHP</td>
+                <td>PHP <br /> (Dynamic Website)</td>
                 <td><a href="sides/php.html">Link zum PHP Tutorial</a><td>
             </tr>
             <tr>
@@ -45,6 +45,11 @@
                 <td><a href="sides/git.html"><img src="pic/gitlogo.png" align="center" height="300";/></a></td>
                 <td>Git</td>
                 <td><a href="sides/git.html">Link zum Git Tutorial</a><td>
+            </tr>
+            <tr>
+                <td><a href="sides/matlab.html"><img src="pic/matlab.png" align="center" height="300";/></a></td>
+                <td>Matlab</td>
+                <td><a href="sides/matlab.html">Link zum Matlab Tutorial</a><td>
             </tr>
         </table>
 
