--- a/sides/python.html
+++ b/sides/python.html
@@ -2,8 +2,106 @@
 
 <html>
     <head>
+        <title>
+            Python
+        </title>
         <link rel="stylesheet" type="text/css" href="../style.css">
+        <style>
+        td{
+            text-align:center;
+        }
+        </style>
     </head>
-</html>
+    <body>
+        <h1 align="center">Python Tutorial</h1><br />
 
-<p>In Bearbeitung</p>
+        <!--1. Tabelle-->
+        <h2><u>Grundlagen</u></h2>
+        <table align="center" border="1" width="95%" cellpadding="5px">
+            <tr>
+                <th width="50%">Code</th> 
+                <th width="50%">Erklärung</th>
+            </tr>
+
+            <tr>
+                <td>print()</td>
+                <td>Etwas ausgeben</td>
+            </tr>
+            <tr>
+                <td>input()</td>
+                <td>Etwas eingeben</td>
+            </tr>
+            <tr>
+                <td>print(„s“ + str(int)</td>
+                <td>Man darf nicht String + int oder so!</td>
+            </tr>
+            <tr>
+                <td>f"hello my name ist {name}"</td>
+                <td>F-Strings</td>
+            </tr>
+        </table>
+
+         <!--2. Tabelle-->
+         <h2><u>Listen</u></h2>
+         <table align="center" border="1" width="95%" cellpadding="5px">
+             <tr>
+                 <th width="50%">Code</th> 
+                 <th width="50%">Erklärung</th>
+             </tr>
+ 
+             <tr>
+                 <td>list = [„s“, „s“]</td>
+                 <td>Listen implementieren</td>
+             </tr>
+             <tr>
+                 <td>list.append(„s“)</td>
+                 <td>Hinten ansetzten</td>
+             </tr>
+             <tr>
+                <td>list.extend([„s“, „s“])</td>
+                <td>Hinten ansetzten</td>
+            </tr>
+             <tr>
+                 <td>print(2 in list)</td>
+                 <td>BOOL! Überprüft ob 2 in der liste ist</td>
+             </tr>
+             <tr>
+                 <td>list.pop()</td>
+                 <td>Entfernt letzter Eintrag</td>
+             </tr>
+             <tr>
+                <td>del(list[0])</td>
+                <td>Entfernt 0ter Eintrag in der list</td>
+            </tr>
+            <tr>
+                <td>list.remove("c")</td>
+                <td>Entfernt den Wert c</td>
+            </tr>
+            <tr>
+                <td>list.sort(key=len)</td>
+                <td>Sortiert die gegebene Liste</td>
+            </tr>
+            <tr>
+                <td>list1 = sorted(list)</td>
+                <td>Macht eine neue sortierte Liste (list1) von list</td>
+            </tr>
+            <tr>
+                <td>del(list[0])</td>
+                <td>Entfernt 0ter Eintrag in der list</td>
+            </tr>
+            <tr>
+                <td>del(list[0])</td>
+                <td>Entfernt 0ter Eintrag in der list</td>
+            </tr>
+            <tr>
+                <td>del(list[0])</td>
+                <td>Entfernt 0ter Eintrag in der list</td>
+            </tr>
+            <tr>
+                <td>del(list[0])</td>
+                <td>Entfernt 0ter Eintrag in der list</td>
+            </tr>
+
+         </table>
+    </body>
+</html>
